--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,25 @@ bundler_args: --without yard guard benchmarks
 before_install:
   - gem install bundler -v '~> 1.10'
 
-rvm:
-  - 2.2.4
-  - 2.3.0
-  - ruby-head
-
 matrix:
   allow_failures:
     - rvm: ruby-head
+  include:
+  - rvm: 2.2.4
+    gemfile: gemfiles/active_record.rb
+    env: ORM=active_record
+  - rvm: 2.2.4
+    gemfile: gemfiles/sequel.rb
+    env: ORM=sequel
+  - rvm: 2.3.1
+    gemfile: gemfiles/active_record.rb
+    env: ORM=active_record
+  - rvm: 2.3.1
+    gemfile: gemfiles/sequel.rb
+    env: ORM=sequel
+  - rvm: ruby-head
+    gemfile: gemfiles/active_record.rb
+    env: ORM=active_record
+  - rvm: ruby-head
+    gemfile: gemfiles/sequel.rb
+    env: ORM=sequel
